test/char/non_terminated.lox
print '; // error: non-terminated char
